--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,116 +1,47 @@
+.section {
+  padding-top: 3rem;
+  padding-bottom: 2rem;
+}
+
 .container {
-  padding: 0 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
+.home__continer {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  margin-top: 10rem;
+  align-items: center;   
 }
 
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
+.home__title {
+  display: block;
+  font-weight: 800;
+  font-size: 2.5em;
 }
 
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
+.home__description {
+  display: block;
+  font-weight: 500;
+  font-size: 1.5em;
+  width: 70%;
+  margin-bottom: 2rem;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.home__btn {
+  background-color: rgb(26, 78, 56);
+  border: none;
+  padding: 1rem 2rem;
+  color: #ffff;
+  font-weight: 700;
+  font-size: 1em;
+  border-radius: 15px;
+  cursor: pointer;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
+.home__img {
+  width: 400px;
+  height: auto;
+  justify-self: center;
+  object-fit: cover;
 }
